# consolidation-memory

./: .dockerignore  .gitignore  .mailmap  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  GOAL.md  LICENSE  README.md  SECURITY.md  my_script.js  pyproject.toml  requirements-dev.txt
.claude/: settings.json  settings.local.json
.claude/hooks/: post-push-check.ps1  ruff-check.ps1
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.cursor/: hooks.json  mcp.json
.cursor/rules/: consolidation-memory.mdc
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/DISCUSSION_TEMPLATE/: announcements.yml  general.yml  ideas.yml  polls.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  builder-readiness-review.md  config.yml  feature_request.yml
.github/workflows/: changelog-on-main.yml  novelty-full-nightly.yml  publish.yml  release-docs-guard.yml  release-on-main.yml  test.yml
.grok/hooks/: require-memory-recall.json  require_memory_recall.py
.grok/rules/: 00-memory-first.md  consolidation-memory.md
benchmarks/: __init__.py  answering.py  baselines.py  coding_agent_eval.py  ingestion.py  locomo.py  novelty_eval.py  prompts.py  real_world_eval.py  repeatability_report.py  scoring.py
docs/: AGENT_GOAL.md  ARCHITECTURE.md  BUILDER_BASELINE.md  CODING_AGENT_METRICS.md  EXTERNAL_REVIEW_PLAYBOOK.md  FAST_PATH_EPISODES.md  FRESH_CHAT_PROMPTS.md  LOCOMO_BENCHMARK.md  MODEL_SUPPORT.md  MONETIZATION.md  NOVELTY_EVAL_GUIDE.md  NOVELTY_EXECUTION_CHUNKS.md  NOVELTY_METRICS.md  NOVELTY_WEDGE.md  PLUGIN_DEVELOPMENT.md  REAL_WORLD_METRICS.md  RELEASE_AUTOMATION.md  RELEASE_GATES.md  ROADMAP.md  SELF_IMPROVEMENT_PROMPT_PACK.md  VIBECODING.md  recommended-agent-instructions.md  recommended-claude-md.md
docs/examples/: claude-desktop-config.json  continue-config.json  cursor-mcp.json  generic-mcp.json  minimal_plugin.py
docs/plans/: 2026-02-28-multi-project-namespace-design.md  2026-02-28-multi-project-namespace-plan.md  2026-02-28-readme-overhaul-plan.md  2026-02-28-tui-dashboard-design.md  2026-02-28-tui-dashboard-plan.md  2026-03-01-code-review-fixes.md
docs/strategy/: CODEX_UNIVERSAL_MEMORY_PROMPTS.txt  execution-log.md  memory-object-model.md  query-semantics.md  schema-migration-plan.md  shared-memory-scopes.md  universal-memory-architecture.md  universal-memory-execution-plan.md  universal-memory-gap-analysis.md
examples/: README.md  __init__.py
examples/continue-dev/: README.md  continue-config.json
examples/cursor-integration/: README.md  cursor-mcp.json
examples/langgraph-memory-node/: README.md  langgraph_memory_node.py
examples/plugins/: README.md  __init__.py  recall_audit_plugin.py
examples/python-quickstart/: quickstart.py
examples/rest-api/: README.md  client.py
examples/trust-vs-rag/: README.md  demo_flow.py
scripts/: agent_bootstrap_check.py  analyze_corpus_cleanup.py  changelog_builder.py  check_release_docs.py  cleanup_corpus.py  final-audit-prompt.md  install_git_hooks.py  pre_push_check.py  release.py  release_criteria.py  smoke_builder_base.py  split_database_module.py  sync_working_copy.py  trend_real_world_metrics.py  update_changelog.py
src/consolidation_memory/: __init__.py  __main__.py  claim_cache.py  claim_graph.py  cli.py  client.py  client_runtime.py  config.py  consolidation.py  context_assembler.py  corpus_hygiene.py  daemon_service.py  dashboard.py  dashboard_data.py  database.py  desktop_app.py  desktop_backend.py  drift.py  drift_subprocess.py  drift_worker.py  embedding_disk_cache.py  entity_recall.py  episode_embedding.py  hypothesis_competition.py  knowledge_consistency.py  knowledge_paths.py  maintenance.py  markdown_records.py  ops_routes.py  plugins.py  policy_admin.py  policy_engine.py  process_write_lock.py  query_semantics.py  query_service.py  recall_budget.py  record_cache.py  release_gates.py  rest.py  runtime.py  (+11 more)
src/consolidation_memory/backends/: __init__.py  base.py  fastembed_backend.py  lmstudio.py  ollama.py  openai_backend.py
src/consolidation_memory/consolidation/: __init__.py  clustering.py  engine.py  fast_path.py  prompting.py  scoring.py  utility_scheduler.py
src/consolidation_memory/db/: __init__.py  _helpers.py  anchors.py  claims.py  connection.py  consolidation.py  episodes.py  export.py  migrations.py  outcomes.py  records.py  scope.py  stats.py  topics.py
src/consolidation_memory/web/: __init__.py  index.html  published_metrics.json
tests/: conftest.py  helpers.py  surface_contract_helpers.py  test_adaptive_consolidation.py  test_architecture_doc_sync.py  test_audit_scope_isolation.py  test_backends.py  test_changelog_builder.py  test_circuit_breaker.py  test_claim_cache.py  test_claim_emission.py  test_claim_graph.py  test_claim_recall.py  test_claim_retrieval.py  test_cli.py  test_cli_policy.py  test_client.py  test_client_runtime_health.py  test_clustering.py  test_coding_agent_eval.py  test_concurrency.py  test_consolidation_log.py  test_consolidation_scope.py  test_context_assembler.py  test_contradictions.py  test_core.py  test_corpus_hygiene.py  test_daemon_service.py  test_dashboard.py  test_dashboard_data.py  test_desktop_app.py  test_drift_invalidation.py  test_drift_subprocess.py  test_drift_worker.py  test_embedding_disk_cache.py  test_entity_recall.py  test_episode_anchors.py  test_episode_embedding.py  test_fast_path_consolidation.py  test_hybrid_search.py  (+52 more)
