[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consolidation-memory"
version = "0.9.0"
description = "Local-first persistent memory for AI agents — store, recall, and consolidate knowledge across sessions using FAISS, SQLite, and any LLM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Charlie Wright"}]
keywords = ["mcp", "memory", "ai", "semantic-search", "faiss", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.28.0",
    "faiss-cpu>=1.9.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
fastembed = ["fastembed>=0.4.0"]
openai = ["openai>=1.0.0"]
rest = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]
dashboard = ["textual>=1.0.0"]
all = ["consolidation-memory[fastembed,openai,rest,dashboard]"]
dev = ["pytest>=8.0.0", "ruff>=0.7.0", "mypy>=1.0.0"]

[project.scripts]
consolidation-memory = "consolidation_memory.cli:main"

[project.urls]
Homepage = "https://github.com/charliee1w/consolidation-memory"
Repository = "https://github.com/charliee1w/consolidation-memory"
Issues = "https://github.com/charliee1w/consolidation-memory/issues"
Changelog = "https://github.com/charliee1w/consolidation-memory/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
consolidation_memory = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "faiss",
    "scipy.*",
    "fastembed.*",
    "openai.*",
    "textual.*",
    "mcp.*",
    "platformdirs.*",
    "tomli",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
