[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consolidation-memory"
version = "0.14.2"
description = "Trust-calibrated working memory for coding agents with provenance, drift awareness, and scoped sharing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Charlie Wright"}]
keywords = [
    "mcp",
    "memory",
    "ai",
    "semantic-search",
    "faiss",
    "agents",
    "persistent-memory",
    "local-first",
    "coding-agents",
    "drift-detection",
    "provenance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "httpx>=0.28.0",
    "faiss-cpu>=1.9.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
fastembed = ["fastembed>=0.4.0"]
openai = ["openai>=1.0.0"]
benchmark = ["openai>=1.0.0"]
rest = ["fastapi>=0.115.0", "uvicorn[standard]>=0.34.0"]
dashboard = ["textual>=1.0.0"]
all = ["consolidation-memory[fastembed,openai,rest,dashboard,benchmark]"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "build>=1.2.0",
    "twine>=5.1.0",
]

[project.scripts]
consolidation-memory = "consolidation_memory.cli:main"

[project.urls]
Homepage = "https://github.com/charliee1w/consolidation-memory"
Repository = "https://github.com/charliee1w/consolidation-memory"
Documentation = "https://github.com/charliee1w/consolidation-memory#readme"
Issues = "https://github.com/charliee1w/consolidation-memory/issues"
Discussions = "https://github.com/charliee1w/consolidation-memory/discussions"
Changelog = "https://github.com/charliee1w/consolidation-memory/blob/main/CHANGELOG.md"
Releases = "https://github.com/charliee1w/consolidation-memory/releases"
Security = "https://github.com/charliee1w/consolidation-memory/security/policy"

[tool.setuptools.package-data]
consolidation_memory = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "faiss",
    "scipy.*",
    "fastembed.*",
    "openai.*",
    "textual.*",
    "mcp.*",
    "platformdirs.*",
    "tomli",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = ["--basetemp=.pytest_tmp"]
cache_dir = ".pytest_cache_local"
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

